refactor: update VehicleController to use VehicleAccessService for vehicle ownership checks and simplify file handling; introduce new methods for file handling and resource loading; dto refactor